Attempt to fix "tap targets too close together"

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,8 @@ img {
 			#map {
 	height: 555px;
 	width: 100%;
-	clear: both;						
+	clear: both;
+	margin-top: 10px;
 			}
 }
 
